Prevent jumping back and forth in history
When reverting to a step in the games' history, it'll prevent you from going back to a step in the future

--- a/tic-tac-toe/src/index.css
+++ b/tic-tac-toe/src/index.css
@@ -48,3 +48,8 @@ ol, ul {
 .game-info {
   margin-left: 20px;
 }
+
+button[disabled] {
+  opacity: .5;
+  color: #666;
+}
